<resources>
    <string name="app_name">CoronaInfo</string>
    <string name="salam">Selamat Datang</string>
    <string name="data_kasus_indonsia">Data kasus Indonsia</string>
    <string name="total_kasus_terkonfirmasi">Total Kasus Terkonfirmasi</string>
    <string name="dirawat">Dirawat</string>
    <string name="sembuh">Sembuh</string>
    <string name="meninggal">Meninggal</string>
    <string name="kasus_lainnya">Kasus Lainnya</string>
    <string name="data_dunia">Data Dunia</string>
    <string name="data_provinsi">Data Provinsi</string>
    <string name="data_global">Data Global</string>
    <string name="positif">Positif</string>
</resources>