<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/teal_700"
    tools:context=".ui.fragment.WorldFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserrat"
        android:text="@string/data_dunia"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchBar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="62dp"
                android:background="@color/grey"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@+id/searchBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/searchBar"
                app:layout_constraintTop_toTopOf="@+id/searchBar"
                app:srcCompat="@drawable/ic_search" />

            <HorizontalScrollView
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchBar"
                android:layout_marginEnd="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="100dp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="15dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            app:srcCompat="@drawable/ic_add" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/positif"
                            android:textColor="@color/black"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/tv_positif"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="45dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            tools:text="50000" />
                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        android:layout_marginEnd="8dp"
                        app:cardCornerRadius="15dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            app:srcCompat="@drawable/ic_check" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/sembuh"
                            android:textColor="@color/black"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/tv_sembuh"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="45dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            tools:text="150000" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="120dp"
                        android:layout_height="match_parent"
                        app:cardCornerRadius="15dp">

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            app:srcCompat="@drawable/ic_close" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="25dp"
                            android:fontFamily="@font/montserrat"
                            android:text="@string/meninggal"
                            android:textColor="@color/black"
                            android:textSize="17sp" />

                        <TextView
                            android:id="@+id/tv_meninggal"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="45dp"
                            android:fontFamily="@font/montserrat"
                            android:textColor="@color/black"
                            android:textSize="22sp"
                            android:textStyle="bold"
                            tools:text="54000" />
                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>
            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar2"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.578" />

</androidx.constraintlayout.widget.ConstraintLayout>